# nqs-adiabatic

./: CITATION.cff  LICENSE  README.md  pyproject.toml
atr/: __init__.py  fidelity.py  graph.py  jacobian.py  sampler.py  states.py  transport.py  utils.py
atr/linalg/: __init__.py  linear_operator.py  solve.py
atr/models/: __init__.py  base.py  rbm.py  utils.py
atr/operator/: __init__.py  base.py  expect.py  local.py  spin.py
examples/: ground-state-2d.ipynb  ground-state.ipynb  transport.ipynb
