[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atr"
version = "0.1.0"
description = "Research code for adiabatic transport of neural-network quantum states."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Matija Medvidovic", email = "matija.medvidovic@gmail.com" },
    { name = "Alev Orfi", email = "aorfi1234@gmail.com" },
]
keywords = ["quantum", "neural", "adiabatic", "monte carlo"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jax<=0.6.2",
    "equinox",
    "jaxtyping",
    "einops",
    "lineax",
    "numpy",
    "scipy",
]
requires-python = ">=3.9,<4.0"

[project.urls]
Repository = "https://github.com/Matematija/nqs-adiabatic"

[tool.setuptools]
packages = ["atr"]

[project.optional-dependencies]
jaxlib = ["jaxlib>=0.4.14"]
dev = ["pytest>=7.0", "black", "flake8"]

# [tool.pytest.ini_options]
# minversion = "7.0"
# addopts = "-q"
# testpaths = ["tests"]
